--- a/site/restaurant-site/index.html
+++ b/site/restaurant-site/index.html
@@ -70,7 +70,7 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header> <!-- End of Header -->
 
     <div id="main-content" class="container">
       <div class="jumbotron">
